2010-12-08  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Build fix. Take webView{Enter,Exit}Fullscreen back out of the
        WebKit namespace, and remove a function signature that got in by
        mistake because of a bad merge.

        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        (WebKit::core):
        (WebKit::kit):

2010-12-08  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by John Sullivan.

        Layering Violation in ContextMenu - member variable of type HitTestResult
        https://bugs.webkit.org/show_bug.cgi?id=50586
        
        Update users of ContextMenu and ContextMenuController to match where the new functions 
        are located.

        * WebCoreSupport/ContextMenuClientGtk.cpp:
        (WebKit::ContextMenuClient::getCustomMenuFromDefaultItems):

2010-12-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by John Sullivan.

        [GTK] Layering violation in ContextMenuGtk.cpp
        https://bugs.webkit.org/show_bug.cgi?id=50676

        ContextMenuGtk accesses the page's ContextMenuController, which is a layering
        violation. This was fixed for Mac with change r73469. We make a similar fix here
        by moving the "activated" signal connection to the WebKit layer.

        * webkit/webkitwebview.cpp:
        (popupMenuItemActivated): Have ContextMenuController handle this signal.
        (webkit_web_view_forward_context_menu_event): For all items in the untouched
        context menu, connect their "activated" signal to the new popupMenuItemActivated
        handler.

2010-12-08  Antonio Gomes  <agomes@rim.com>

        Reviewed by Martin Robinson.

        [Gtk] Populate DumpRenderTreeSupportGtk (part III)
        https://bugs.webkit.org/show_bug.cgi?id=48429

        Adjusted some call sites of previously internal API declared
        webkitprivate.h that have moved to DumpRenderTreeSupportGtk.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp: